Ajout routes authentification
