# swagger.json
@@ -24,53 +24,7 @@
       }
    ],
    "paths": {
-      "comment": "Auth",
-      "/auth/login": {
-         "post": {
-            "operationId": "auth_login",
-            "tags": [
-               "Auth"
-            ],
-            "description": "Connecte un utilisateur",
-            "parameters": [
-               {
-                  "name": "user",
-                  "in": "body",
-                  "required": true,
-                  "schema": {
-                     "type": "object",
-                     "properties": {
-                        "email": {
-                           "type": "string"
-                        },
-                        "password": {
-                           "type": "string"
-                        }
-                     }
-                  }
-               }
-            ],
-            "responses": {
-               "200": {
-                  "description": "successful operation",
-                  "schema": {
-                     "type": "object",
-                     "properties": {
-                        "token": {
-                           "type": "string"
-                        }
-                     }
-                  }
-               },
-               "404": {
-                  "description": "Not found"
-               },
-               "500": {
-                  "description": "Internal server error"
-               }
-            }
-         }
-      },
+    
       "comment": "Clients",
       "/clients": {
          "get": {
@@ -107,6 +61,72 @@
                            "email": {
                               "type": "string"
                            }
+                        }
+                     }
+                  }
+               },
+               "404": {
+                  "description": "Not found"
+               },
+               "500": {
+                  "description": "Internal server error"
+               }
+            }
+         },
+         "post": {
+            "operationId": "clients_post",
+            "tags": [
+               "Clients"
+            ],
+            "description": "Ajoute un nouveau client",
+            "parameters": [
+               {
+                  "name": "client",
+                  "in": "body",
+                  "required": true,
+                  "schema": {
+                     "type": "object",
+                     "properties": {
+                        "first_name": {
+                           "type": "string"
+                        },
+                        "last_name": {
+                           "type": "string"
+                        },
+                        "phone": {
+                           "type": "string"
+                        },
+                        "email": {
+                           "type": "string"
+                        }
+                     }
+                  }
+               }
+            ],
+            "responses": {
+               "200": {
+                  "description": "successful operation",
+                  "schema": {
+                     "type": "object",
+                     "properties": {
+                        "id_client": {
+                           "type": "integer"
+                        },
+                        "first_name": {
+                           "type": "string"
+                        },
+                        "last_name": {
+                           "type": "string"
+                        },
+                        "phone": {
+                           "type": "string"
+                        },
+                        "registration_date": {
+                           "type": "string",
+                           "format": "date-time"
+                        },
+                        "email": {
+                           "type": "string"
                         }
                      }
                   }
